# boartty

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
boartty/: alembic.ini  app.py  commentlink.py  config.py  db.py  dbsupport.py  keymap.py  mywid.py  palette.py  sync.py  version.py
boartty/alembic/: env.py
boartty/alembic/versions/: 183755ac91df_initial_schema.py  acca67ec622b_update_story_tag_table.py
boartty/search/: __init__.py  parser.py  tokenizer.py
boartty/view/: board.py  board_list.py  project_list.py  story.py  story_list.py
doc/: Makefile
doc/source/: conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
examples/: minimal-boartty.yaml  openstack-boartty.yaml  reference-boartty.yaml
