[metadata]
name = boartty
summary = Boardtty is a console-based interface to Storyboard.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
keywords = storyboard console urwid

[files]
packages =
    boartty
data_files =
    share/boartty/examples = examples/*

[entry_points]
console_scripts =
    boartty = boartty.app:main
